# proven-servers

./: .cursorrules  .envrc  .gitattributes  .gitignore  .guix-channel  .windsurfrules  0-AI-MANIFEST.a2ml  ABI-FFI-README.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  EXPLAINME.adoc  GOVERNANCE.md  Justfile  MAINTAINERS.md  PLACEHOLDERS.md  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  cliff.toml  contractile.just  eclexiaiser.toml  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  setup.sh  stapeln.toml
.devcontainer/: Containerfile  README.adoc  devcontainer.json
.github/: CODEOWNERS  MAINTAINERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: boj-trigger.yml  casket-pages.yml  codeql.yml  dogfood-checks.yml  e2e.yml  governance.yml  hypatia-scan.yml  instant-sync-dispatch.yml  instant-sync.yml  panic-attack-hexadeca.yml  release.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.a2ml  BINDINGS.a2ml  CLADE.a2ml  ENSAID_CONFIG.a2ml  INTENT.contractile  META.a2ml  MUST.contractile  PLAYBOOK.a2ml  STATE.a2ml  TRUST.contractile
.machine_readable/6a2/: AGENTIC.a2ml  ECOSYSTEM.a2ml  META.a2ml  NEUROSYM.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/contractiles/: Justfile
.machine_readable/integrations/: rgtv.a2ml
.machine_readable/policies/: MAINTENANCE-AXES.a2ml  MAINTENANCE-CHECKLIST.a2ml
.machine_readable/self-validating/: README.adoc
.reuse/: dep5
.well-known/: humans.txt  security.txt
.well-known/groove/: manifest.json
audits/: assail-classifications.a2ml  audit-ffi-2026-05-26.md  proof-panic-attack-2026-06-23.md
bindings/ada/: proven_servers.gpr
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/proven/: agentic.hpp  airgap.hpp  amqp.hpp  apiserver.hpp  appserver.hpp  authserver.hpp  backup.hpp  bfd.hpp  bgp.hpp  ca.hpp  cache.hpp  caldav.hpp  carddav.hpp  chat.hpp  coap.hpp  configmgmt.hpp  container.hpp  ctlog.hpp  dbserver.hpp  dds.hpp  deception.hpp  dhcp.hpp  diode.hpp  dns.hpp  doh.hpp  doq.hpp  dot.hpp  error.hpp  federation.hpp  fileserver.hpp  firewall.hpp  ftp.hpp  gameserver.hpp  git.hpp  graphdb.hpp  graphql.hpp  grpc.hpp  hardened.hpp  honeypot.hpp  http.hpp  (+62 more)
bindings/csharp/: ProvenServers.csproj
bindings/dart/: pubspec.yaml
bindings/elixir/: .formatter.exs  mix.exs
bindings/gleam/: .gitignore  gleam.toml
bindings/go/: agentic.go  airgap.go  amqp.go  apiserver.go  appserver.go  authserver.go  backup.go  bfd.go  bgp.go  ca.go  cache.go  caldav.go  carddav.go  chat.go  coap.go  configmgmt.go  container.go  ctlog.go  dbserver.go  dds.go  deception.go  dhcp.go  diode.go  dns.go  doh.go  doq.go  dot.go  federation.go  fileserver.go  firewall.go  ftp.go  gameserver.go  git.go  go.mod  graphdb.go  graphql.go  grpc.go  hardened.go  honeypot.go  http.go  (+62 more)
bindings/haskell/: proven-servers.cabal
bindings/haskell/src/: ProvenServers.hs
bindings/haskell/src/ProvenServers/: Agentic.hs  Airgap.hs  Amqp.hs  Apiserver.hs  Appserver.hs  Authserver.hs  Backup.hs  Bfd.hs  Bgp.hs  Ca.hs  Cache.hs  Caldav.hs  Carddav.hs  Chat.hs  Coap.hs  Configmgmt.hs  Container.hs  Core.hs  Ctlog.hs  Dbserver.hs  Dds.hs  Deception.hs  Dhcp.hs  Diode.hs  Dns.hs  Doh.hs  Doq.hs  Dot.hs  Error.hs  FFI.hs  Federation.hs  Fileserver.hs  Firewall.hs  FirewallTypes.hs  Ftp.hs  FtpTypes.hs  Gameserver.hs  Git.hs  Graphdb.hs  Graphql.hs  (+69 more)
bindings/java/: pom.xml
bindings/ocaml/: dune-project
bindings/ocaml/lib/: dune  proven_agentic.ml  proven_airgap.ml  proven_amqp.ml  proven_apiserver.ml  proven_appserver.ml  proven_authserver.ml  proven_backup.ml  proven_bfd.ml  proven_bgp.ml  proven_ca.ml  proven_cache.ml  proven_caldav.ml  proven_carddav.ml  proven_chat.ml  proven_coap.ml  proven_configmgmt.ml  proven_container.ml  proven_ctlog.ml  proven_dbserver.ml  proven_dds.ml  proven_deception.ml  proven_dhcp.ml  proven_diode.ml  proven_dns.ml  proven_doh.ml  proven_doq.ml  proven_dot.ml  proven_error.ml  proven_federation.ml  proven_fileserver.ml  proven_firewall.ml  proven_ftp.ml  proven_gameserver.ml  proven_git.ml  proven_graphdb.ml  proven_graphql.ml  proven_grpc.ml  proven_hardened.ml  proven_honeypot.ml  (+63 more)
bindings/python/: pyproject.toml
bindings/python/proven_servers/: __init__.py  agentic.py  airgap.py  amqp.py  apiserver.py  appserver.py  authserver.py  backup.py  bfd.py  bgp.py  ca.py  cache.py  caldav.py  carddav.py  chat.py  coap.py  configmgmt.py  container.py  ctlog.py  dbserver.py  dds.py  deception.py  dhcp.py  diode.py  dns.py  doh.py  doq.py  dot.py  error.py  federation.py  ffi.py  fileserver.py  firewall.py  ftp.py  gameserver.py  git.py  graphdb.py  graphql.py  grpc.py  hardened.py  (+63 more)
bindings/rust/: Cargo.toml
bindings/rust/benches/: protocols.rs
bindings/rust/src/: agentic.rs  airgap.rs  amqp.rs  apiserver.rs  appserver.rs  authserver.rs  backup.rs  bfd.rs  bgp.rs  ca.rs  cache.rs  caldav.rs  carddav.rs  chat.rs  coap.rs  configmgmt.rs  container.rs  core.rs  ctlog.rs  dbserver.rs  dds.rs  deception.rs  dhcp.rs  diode.rs  dns.rs  doh.rs  doq.rs  dot.rs  error.rs  federation.rs  ffi_dns.rs  ffi_firewall.rs  ffi_ftp.rs  ffi_graphql.rs  ffi_grpc.rs  ffi_httpd.rs  ffi_macros.rs  ffi_mqtt.rs  ffi_smtp.rs  ffi_ssh.rs  (+70 more)
connectors/: README.adoc
container/: .gatekeeper.yaml  Containerfile  README.adoc  compose.toml  ct-build.sh  deploy.k9.ncl  entrypoint.sh  manifest.toml  vordr.toml
docs/: AI-CONVENTIONS.md  AI-INSTALL-README-SECTION.adoc  AI_INSTALLATION_GUIDE.adoc  CITATIONS.adoc  QUICKSTART.md  THREAT-MODEL.md  tech-debt-2026-05-26.md
examples/: web-project-deno.json
licensing/: README.adoc
tests/: cross_binding_test.sh  e2e.sh  property_test.sh
tools/: check-binding-policy.sh  gen-abi.sh
(+3365 files in other folders)
